test/scc_test/exp/semantic-errors/025.a
025.t:4:6: error: expression must have integral type